--- a/fnfl/templates/fnfl/lineup_list.html
+++ b/fnfl/templates/fnfl/lineup_list.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>FNFL DAWGS</title>
+        <title>FNFL Dawgs</title>
     </head>
     <body>
         <h1>Coming Soon</h1>
