--- a/fnfl/templates/fnfl/lineup_list.html
+++ b/fnfl/templates/fnfl/lineup_list.html
@@ -3,6 +3,22 @@
         <title>FNFL Dawgs</title>
     </head>
     <body>
-        <h1>Coming Soon</h1>
+        <div>
+            <h1><a href="/">FNFL Dawgs</a></h1>
+        </div>
+
+        {% for lineup in lineups %}
+        <div>
+            <p>published: {{ lineup.published_date }}</p>
+            <h1><a href="">{{ lineup.week }}</a></h1>
+            <p>QB: {{ lineup.qb }}</p>
+            <p>RB: {{ lineup.rb1 }}</p>
+            <p>RB: {{ lineup.rb2 }}</p>
+            <p>WR: {{ lineup.wr1 }}</p>
+            <p>WR: {{ lineup.wr2 }}</p>
+            <p>TE: {{ lineup.te }}</p>
+            <p>K: {{ lineup.k }}</p>
+        </div>
+        {% endfor %}
     </body>
 </html>
