--- a/fnfl/templates/fnfl/lineup_list.html
+++ b/fnfl/templates/fnfl/lineup_list.html
@@ -1,35 +1,19 @@
-{% load staticfiles %}
+{% extends 'fnfl/base.html' %}
 
-<html>
-    <head>
-        <title>FNFL Dawgs</title>
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-        <link rel="stylesheet" href="{% static 'css/fnfl.css' %}">
-    </head>
-    <body>
-        <div class="page-header">
-            <h1><a href="/">FNFL Dawgs</a></h1>
-        </div>
-        
-        <div class="content container">
-            <div class="row">
-                <div class="col-md-8">
-                    {% for lineup in lineups %}
-                        <div class="lineup">
-                            <p>published: {{ lineup.published_date }}</p>
-                            <h1><a href="">{{ lineup.week }}</a></h1>
-                            <p>QB: {{ lineup.qb }}</p>
-                            <p>RB: {{ lineup.rb1 }}</p>
-                            <p>RB: {{ lineup.rb2 }}</p>
-                            <p>WR: {{ lineup.wr1 }}</p>
-                            <p>WR: {{ lineup.wr2 }}</p>
-                            <p>TE: {{ lineup.te }}</p>
-                            <p>K: {{ lineup.k }}</p>
-                        </div>
-                    {% endfor %}
-                </div>
+{% block content %}
+    {% for lineup in lineups %}
+        <div class="lineup">
+            <h1><a href="{% url 'lineup_detail' pk=lineup.pk %}">{{ lineup.week }}</a></h1>
+            <p>QB: {{ lineup.qb }}</p>
+            <p>RB: {{ lineup.rb1 }}</p>
+            <p>RB: {{ lineup.rb2 }}</p>
+            <p>WR: {{ lineup.wr1 }}</p>
+            <p>WR: {{ lineup.wr2 }}</p>
+            <p>TE: {{ lineup.te }}</p>
+            <p>K: {{ lineup.k }}</p>
+            <div class="date">
+                <p>published: {{ lineup.published_date }}</p>
             </div>
         </div>
-    </body>
-</html>
+    {% endfor %}
+{% endblock %}
