--- a/fnfl/templates/fnfl/base.html
+++ b/fnfl/templates/fnfl/base.html
@@ -9,6 +9,9 @@
     </head>
     <body>
         <div class="page-header">
+        {% if user.is_authenticated %}
+            <a href="{% url 'lineup_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+        {% endif %}
             <h1><a href="/">FNFL Dawgs</a></h1>
         </div>
         
