--- a/fnfl/templates/fnfl/lineup_detail.html
+++ b/fnfl/templates/fnfl/lineup_detail.html
@@ -7,6 +7,9 @@
                 {{ lineup.published_date }}
             </div>
         {% endif %}
+        {% if user.is_authenticated %}
+            <a class="btn btn-default" href="{% url 'lineup_edit' pk=lineup.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+        {% endif %}
         <h1>{{ lineup.week }}</h1>
         <p>QB: {{ lineup.qb }}</p>
         <p>RB: {{ lineup.rb1 }}</p>
