--- a/fnfl/templates/fnfl/lineup_detail.html
+++ b/fnfl/templates/fnfl/lineup_detail.html
@@ -6,9 +6,14 @@
             <div class="date">
                 {{ lineup.published_date }}
             </div>
+        {% else %}
+            <a class="btn btn-default" href="{% url 'fnfl.views.lineup_publish' pk=lineup.pk %}">Publish</a>
         {% endif %}
         {% if user.is_authenticated %}
             <a class="btn btn-default" href="{% url 'lineup_edit' pk=lineup.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+            <a class="btn btn-default" href="{% url 'lineup_remove' pk=lineup.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
+        {% else %}
+            <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
         {% endif %}
         <h1>{{ lineup.week }}</h1>
         <p>QB: {{ lineup.qb }}</p>
