--- a/fnfl/templates/fnfl/lineup_detail.html
+++ b/fnfl/templates/fnfl/lineup_detail.html
@@ -6,7 +6,7 @@
             <div class="date">
                 {{ lineup.published_date }}
             </div>
-        {% else %}
+        {% else %} 
             <a class="btn btn-default" href="{% url 'fnfl.views.lineup_publish' pk=lineup.pk %}">Publish</a>
         {% endif %}
         {% if user.is_authenticated %}
@@ -15,13 +15,23 @@
         {% else %}
             <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
         {% endif %}
-        <h1>Week {{ lineup.week }}</h1>
-        <h3>QB: <span style="font-size: 80%">{{ lineup.qb_first_name }} {{lineup.qb_last_name }} {{lineup.qb_team }}</span></h3>
-        <h3>RB: <span style="font-size: 80%">{{ lineup.rb1_first_name }} {{ lineup.rb1_last_name }} {{lineup.rb1_team }}</span></h3>
-        <h3>RB: <span style="font-size: 80%">{{ lineup.rb2_first_name }} {{ lineup.rb2_last_name }} {{lineup.rb2_team }}</span></h3>
-        <h3>WR: <span style="font-size: 80%">{{ lineup.wr1_first_name }} {{ lineup.wr1_last_name }} {{ lineup.wr1_team }}</span></h3>
-        <h3>WR: <span style="font-size: 80%">{{ lineup.wr2_first_name }} {{ lineup.wr2_last_name }} {{ lineup.wr2_team }}</span></h3>
-        <h3>TE: <span style="font-size: 80%">{{ lineup.te_first_name }} {{ lineup.te_last_name }} {{ lineup.te_team }}</span></h3>
-        <h3>K: <span style="font-size: 80%">{{ lineup.k_first_name }} {{ lineup.k_last_name }} {{ lineup.k_team }}</span></h3>
+        <h1>{{ lineup.week }}</h1>
+        {% for p in lineup.player.all %}
+            {% if p.position == "QB" %}
+                <p>{{p.position}} {{p.name}} {{p.team}}</p>
+            {% endif %}
+            {% if p.position == "RB" %}
+                <p>{{p.position}} {{p.name}} {{p.team}}</p>
+            {% endif %}
+            {% if p.position == "WR" %}
+                <p>{{p.position}} {{p.name}} {{p.team}}</p>
+            {% endif %}
+            {% if p.position == "TE" %}
+                <p>{{p.position}} {{p.name}} {{p.team}}</p>
+            {% endif %}
+            {% if p.position == "K" %}
+                <p>{{p.position}} {{p.name}} {{p.team}}</p>
+            {% endif %}
+        {% endfor %}
     </div>
 {% endblock %}
