fixed broken view and template

--- a/fnfl/templates/fnfl/lineup_detail.html
+++ b/fnfl/templates/fnfl/lineup_detail.html
@@ -18,43 +18,55 @@
         {% endif %}
         <h1>{{ lineup.week }}</h1>
 
-        <span>
-        <a href="{% url 'add_score' pk=lineup.pk player_pk=qb.pk %}">
-            <p>{{qb.position}} {{qb.name}} {{qb.team}}</p>
-        </a>
-            <p>  Score - {{qb_score}}</p>
-        </span>
+        {% if qb != '' %}
+            <a href="{% url 'add_score' pk=lineup.pk player_pk=qb.pk %}">
+                <p>{{qb.position}} {{qb.name}} {{qb.team}}</p>
+            </a>
+                <p>  Score - {{qb_score}}</p>
+        {% endif %}
 
-        <a href="{% url 'add_score' pk=lineup.pk player_pk=rb1.pk %}">
-            <p>{{rb1.position}} {{rb1.name}} {{rb1.team}}</p>
-        </a>
-            <p>  Score - {{rb1_score}}</p>
+        {% if rb1 != '' %}        
+            <a href="{% url 'add_score' pk=lineup.pk player_pk=rb1.pk %}">
+                <p>{{rb1.position}} {{rb1.name}} {{rb1.team}}</p>
+            </a>
+                <p>  Score - {{rb1_score}}</p>
+        {% endif %}
 
-        <a href="{% url 'add_score' pk=lineup.pk player_pk=rb2.pk %}">
-            <p>{{rb2.position}} {{rb2.name}} {{rb2.team}}</p>
-        </a>
-            <p>  Score - {{rb2_score}}</p>
+        {% if rb2 != '' %}
+            <a href="{% url 'add_score' pk=lineup.pk player_pk=rb2.pk %}">
+                <p>{{rb2.position}} {{rb2.name}} {{rb2.team}}</p>
+            </a>
+                <p>  Score - {{rb2_score}}</p>
+        {% endif %}
 
-        <a href="{% url 'add_score' pk=lineup.pk player_pk=wr1.pk %}">
-            <p>{{wr1.position}} {{wr1.name}} {{wr1.team}}</p>
-        </a>
-            <p>  Score - {{wr1_score}}</p>
+        {% if wr1 != '' %}
+            <a href="{% url 'add_score' pk=lineup.pk player_pk=wr1.pk %}">
+                <p>{{wr1.position}} {{wr1.name}} {{wr1.team}}</p>
+            </a>
+                <p>  Score - {{wr1_score}}</p>
+        {% endif %}
 
-        <a href="{% url 'add_score' pk=lineup.pk player_pk=wr2.pk %}">
-            <p>{{wr2.position}} {{wr2.name}} {{wr2.team}}</p>
-        </a>
-            <p>  Score - {{wr2_score}}</p>
+        {% if wr2 != '' %}
+            <a href="{% url 'add_score' pk=lineup.pk player_pk=wr2.pk %}">
+                <p>{{wr2.position}} {{wr2.name}} {{wr2.team}}</p>
+            </a>
+                <p>  Score - {{wr2_score}}</p>
+        {% endif %}
 
-        <a href="{% url 'add_score' pk=lineup.pk player_pk=te.pk %}">
-            <p>{{te.position}} {{te.name}} {{te.team}}</p>
-        </a>
-            <p>  Score - {{te_score}}</p>
+        {% if te != '' %}
+            <a href="{% url 'add_score' pk=lineup.pk player_pk=te.pk %}">
+                <p>{{te.position}} {{te.name}} {{te.team}}</p>
+            </a>
+                <p>  Score - {{te_score}}</p>
+        {% endif %}
 
-        <a href="{% url 'add_score' pk=lineup.pk player_pk=k.pk %}">
-            <p>{{k.position}} {{k.name}} {{k.team}}</p>
-        </a>
-            <p>  Score - {{k_score}}</p>
+        {% if k != '' %}
+            <a href="{% url 'add_score' pk=lineup.pk player_pk=k.pk %}">
+                <p>{{k.position}} {{k.name}} {{k.team}}</p>
+            </a>
+                <p>  Score - {{k_score}}</p>
+        {% endif %}
 
-        <p>Total Score: {{total_week_score}}</p>
+            <p>Total Score: {{total_week_score}}</p>
     </div>
 {% endblock %}
