--- a/fnfl/templates/fnfl/lineup_detail.html
+++ b/fnfl/templates/fnfl/lineup_detail.html
@@ -19,54 +19,66 @@
         <h1>{{ lineup.week }}</h1>
 
         {% if qb != '' %}
-            <a href="{% url 'add_score' pk=lineup.pk player_pk=qb.pk %}">
-                <p>{{qb.position}} {{qb.name}} {{qb.team}}</p>
-            </a>
+            <p>{{qb.position}} {{qb.name}} {{qb.team}}</p>
             <a class="btn btn-default" href="{% url 'edit_player' pk=lineup.pk player_pk=qb.pk %}">Edit QB</a>
             <a class="btn btn-default" href="{% url 'remove_player' pk=lineup.pk player_pk=qb.pk %}">Remove QB</a>
-                <p>  Score - {{qb_score}}</p>
+            <a class="btn btn-default" href="{% url 'add_score' pk=lineup.pk player_pk=qb.pk %}">Add Score</a>
+            <a class="btn btn-default" href="{% url 'edit_score' pk=lineup.pk player_pk=qb.pk %}">Edit Score</a>
+            <p>  Score - {{qb_score}}</p>
         {% endif %}
 
         {% if rb1 != '' %}        
-            <a href="{% url 'add_score' pk=lineup.pk player_pk=rb1.pk %}">
-                <p>{{rb1.position}} {{rb1.name}} {{rb1.team}}</p>
-            </a>
-                <p>  Score - {{rb1_score}}</p>
+            <p>{{rb1.position}} {{rb1.name}} {{rb1.team}}</p>
+            <a class="btn btn-default" href="{% url 'edit_player' pk=lineup.pk player_pk=rb1.pk %}">Edit RB</a>
+            <a class="btn btn-default" href="{% url 'remove_player' pk=lineup.pk player_pk=rb1.pk %}">Remove RB</a>
+            <a class="btn btn-default" href="{% url 'add_score' pk=lineup.pk player_pk=rb1.pk %}">Add Score</a>
+            <a class="btn btn-default" href="{% url 'edit_score' pk=lineup.pk player_pk=rb1.pk %}">Edit Score</a>
+            <p>  Score - {{rb1_score}}</p>
         {% endif %}
 
         {% if rb2 != '' %}
-            <a href="{% url 'add_score' pk=lineup.pk player_pk=rb2.pk %}">
-                <p>{{rb2.position}} {{rb2.name}} {{rb2.team}}</p>
-            </a>
-                <p>  Score - {{rb2_score}}</p>
+            <p>{{rb2.position}} {{rb2.name}} {{rb2.team}}</p>
+            <a class="btn btn-default" href="{% url 'edit_player' pk=lineup.pk player_pk=rb2.pk %}">Edit RB</a>
+            <a class="btn btn-default" href="{% url 'remove_player' pk=lineup.pk player_pk=rb2.pk %}">Remove RB</a>
+            <a class="btn btn-default" href="{% url 'add_score' pk=lineup.pk player_pk=rb2.pk %}">Add Score</a>
+            <a class="btn btn-default" href="{% url 'edit_score' pk=lineup.pk player_pk=rb2.pk %}">Edit Score</a>
+            <p>  Score - {{rb2_score}}</p>
         {% endif %}
 
         {% if wr1 != '' %}
-            <a href="{% url 'add_score' pk=lineup.pk player_pk=wr1.pk %}">
-                <p>{{wr1.position}} {{wr1.name}} {{wr1.team}}</p>
-            </a>
-                <p>  Score - {{wr1_score}}</p>
+            <p>{{wr1.position}} {{wr1.name}} {{wr1.team}}</p>
+            <a class="btn btn-default" href="{% url 'edit_player' pk=lineup.pk player_pk=wr1.pk %}">Edit WR</a>
+            <a class="btn btn-default" href="{% url 'remove_player' pk=lineup.pk player_pk=wr1.pk %}">Remove WR</a>
+            <a class="btn btn-default" href="{% url 'add_score' pk=lineup.pk player_pk=wr1.pk %}">Add Score</a>
+            <a class="btn btn-default" href="{% url 'edit_score' pk=lineup.pk player_pk=wr1.pk %}">Edit Score</a>
+            <p>  Score - {{wr1_score}}</p>
         {% endif %}
 
         {% if wr2 != '' %}
-            <a href="{% url 'add_score' pk=lineup.pk player_pk=wr2.pk %}">
-                <p>{{wr2.position}} {{wr2.name}} {{wr2.team}}</p>
-            </a>
-                <p>  Score - {{wr2_score}}</p>
+            <p>{{wr2.position}} {{wr2.name}} {{wr2.team}}</p>
+            <a class="btn btn-default" href="{% url 'edit_player' pk=lineup.pk player_pk=wr2.pk %}">Edit WR</a>
+            <a class="btn btn-default" href="{% url 'remove_player' pk=lineup.pk player_pk=wr2.pk %}">Remove WR</a>
+            <a class="btn btn-default" href="{% url 'add_score' pk=lineup.pk player_pk=wr2.pk %}">Add Score</a>
+            <a class="btn btn-default" href="{% url 'edit_score' pk=lineup.pk player_pk=wr2.pk %}">Edit Score</a>
+            <p>  Score - {{wr2_score}}</p>
         {% endif %}
 
         {% if te != '' %}
-            <a href="{% url 'add_score' pk=lineup.pk player_pk=te.pk %}">
-                <p>{{te.position}} {{te.name}} {{te.team}}</p>
-            </a>
-                <p>  Score - {{te_score}}</p>
+            <p>{{te.position}} {{te.name}} {{te.team}}</p>
+            <a class="btn btn-default" href="{% url 'edit_player' pk=lineup.pk player_pk=te.pk %}">Edit TE</a>
+            <a class="btn btn-default" href="{% url 'remove_player' pk=lineup.pk player_pk=te.pk %}">Remove TE</a>
+            <a class="btn btn-default" href="{% url 'add_score' pk=lineup.pk player_pk=te.pk %}">Add Score</a>
+            <a class="btn btn-default" href="{% url 'edit_score' pk=lineup.pk player_pk=te.pk %}">Edit Score</a>
+            <p>  Score - {{te_score}}</p>
         {% endif %}
 
         {% if k != '' %}
-            <a href="{% url 'add_score' pk=lineup.pk player_pk=k.pk %}">
-                <p>{{k.position}} {{k.name}} {{k.team}}</p>
-            </a>
-                <p>  Score - {{k_score}}</p>
+            <p>{{k.position}} {{k.name}} {{k.team}}</p>
+            <a class="btn btn-default" href="{% url 'edit_player' pk=lineup.pk player_pk=k.pk %}">Edit K</a>
+            <a class="btn btn-default" href="{% url 'remove_player' pk=lineup.pk player_pk=k.pk %}">Remove K</a>
+            <a class="btn btn-default" href="{% url 'add_score' pk=lineup.pk player_pk=k.pk %}">Add Score</a>
+            <a class="btn btn-default" href="{% url 'edit_score' pk=lineup.pk player_pk=k.pk %}">Edit Score</a>
+            <p>  Score - {{k_score}}</p>
         {% endif %}
 
             <p>Total Score: {{total_week_score}}</p>
