--- a/fnfl/templates/fnfl/base.html
+++ b/fnfl/templates/fnfl/base.html
@@ -38,6 +38,7 @@
         <div class="content container">
             <div class="row">
                 <div class="col-md-8">
+                {% include 'fnfl/messages.html' %}
                 {% block content %}
                 {% endblock %}
                 </div>
