modifying lineup_edit.html
Just changed heading to Edit Lineup

--- a/fnfl/templates/fnfl/lineup_edit.html
+++ b/fnfl/templates/fnfl/lineup_edit.html
@@ -1,7 +1,7 @@
 {% extends 'fnfl/base.html' %}
 
 {% block content %}
-    <h1>New Lineup</h1>
+    <h1>Edit Lineup</h1>
     <form method="POST" class="post-form">{% csrf_token %}
         {{ form.as_p }}
         <br>
